--- a/.project
+++ b/.project
@@ -2,7 +2,7 @@
 Title=MITranslate
 Startup=FMain
 Icon=mitranslate.png
-Version=1.0.3
+Version=1.0.4
 Component=gb.image
 Component=gb.gtk3
 Component=gb.form
@@ -13,5 +13,16 @@ Authors="Murilo Gomes Julio <contatomestredainfo@gmail.com>"
 TabSize=2
 Translate=1
 Language=en
+Maintainer=Murilo Gomes Julio
 Vendor=mestredainfo
+VendorPrefix=mestredainfo
+AppId=org.mestredainfo.mitranslate
+Address=contatomestredainfo@gmail.com
+Url=www.mestredainfo.com.br
+License=General Public License V2 only
+PackageName=mitranslate-1.0.4
+CreateEachDirectory=1
 Packager=1
+Systems=appimage
+AppImageRepository=http://archive.ubuntu.com/ubuntu/
+AppImageDistribution=jammy (22.04)
