--- a/.project
+++ b/.project
@@ -2,12 +2,11 @@
 Title=MITranslate
 Startup=FMain
 Icon=mitranslate.png
-Version=1.0.6
+Version=1.0.0
 Component=gb.image
 Component=gb.gtk3
 Component=gb.form
 Component=gb.settings
-Component=gb.sdl2.audio
 Description="It is software for translating texts, listening to words and phrases and getting the meaning of words through the translate-shell.\nThe MITranslate is under license GPL-2.0-only"
 Authors="Murilo Gomes Julio <contatomestredainfo@gmail.com>"
 TabSize=2
@@ -16,13 +15,22 @@ Language=en
 Maintainer=Murilo Gomes Julio
 Vendor=mestredainfo
 VendorPrefix=mestredainfo
+AppId=br.com.mestredainfo.mitranslate
 Address=contatomestredainfo@gmail.com
 Url=www.mestredainfo.com.br
 License=General Public License V2 only
-PackageName=mitranslate-1.0.6
+PackageName=mitranslate-1.0.0
 CreateEachDirectory=1
 Packager=1
-Systems=appimage
+Systems=debian,appimage,ubuntu
 AppImageRepository=http://archive.ubuntu.com/ubuntu/
 AppImageDistribution=jammy (22.04)
 ExtraDependencies=appimage:"translate-shell\t\t"
+Menus=debian:"Applications/Text"
+Categories=debian:"Utility"
+Groups=debian:"utils"
+ExtraDependencies=debian:"translate-shell\t\t"
+Menus=ubuntu:"Applications/Text"
+Categories=ubuntu:"Utility"
+Groups=ubuntu:"utils"
+ExtraDependencies=ubuntu:"translate-shell\t\t"
