--- a/.project
+++ b/.project
@@ -2,7 +2,7 @@
 Title=MITranslate
 Startup=FMain
 Icon=mitranslate.png
-Version=1.0.0
+Version=1.0.1
 Component=gb.image
 Component=gb.gtk3
 Component=gb.form
@@ -19,10 +19,10 @@ AppId=br.com.mestredainfo.mitranslate
 Address=contatomestredainfo@gmail.com
 Url=www.mestredainfo.com.br
 License=General Public License V2 only
-PackageName=mitranslate-1.0.0
+PackageName=mitranslate-1.0.1
 CreateEachDirectory=1
 Packager=1
-Systems=debian,appimage,ubuntu
+Systems=appimage
 AppImageRepository=http://archive.ubuntu.com/ubuntu/
 AppImageDistribution=jammy (22.04)
 ExtraDependencies=appimage:"translate-shell\t\t"
